--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">Notes</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="note_title">Title</string>
+    <string name="txt_title_hint">Write your title</string>
+    <string name="txt_description">Description</string>
+    <string name="txt_description_hint">Write your description</string>
+    <string name="txt_submit">Submit</string>
+    <string name="add_note">Add Note</string>
+    <string name="search">Search</string>
+    <string name="save">Save</string>
+    <string name="edit_note">Edit Note</string>
+    <string name="currenttime">currentTime</string>
+    <string name="description">Description</string>
+    <string name="image">image</string>
 </resources>
